# orak-challenge

./: .env.example  .gitignore  README.md  experiment.py  pyproject.toml  run.py  settings.txt
Resource & Reference/: Amazon Bedrock Setup & Usage.md  brev_usuage_setup.md
agents/: README.md  config.py  openai_mario.py  openai_pokemon.py  openai_starcraft.py  openai_street_fighter.py  openai_twenty_fourty_eight.py  random_mario.py  random_pokemon.py  random_starcraft.py  random_street_fighter.py  random_twenty_fourty_eight.py
evaluation_utils/: commons.py  game_env.py  game_server_launcher.py  grpc_server.py  grpc_server_utils.py  grpc_server_utils_quick_reference.py  renderer.py  runner.py  sessions.py
evaluation_utils/mcp_game_servers/: base_env.py  base_game_logic.py  base_server.py
evaluation_utils/mcp_game_servers/gameio/: gui_utils.py  io_env.py  window_capture.py  window_capture_mac.py
evaluation_utils/mcp_game_servers/pokemon_red/: config.yaml  server.py
evaluation_utils/mcp_game_servers/pokemon_red/game/: __init__.py  pokemon_red_env.py  pyboy_runner.py
evaluation_utils/mcp_game_servers/pokemon_red/game/utils/: map_preprocess.py  map_utils.py  memory_manager.py  pokemon_tools.py  pokemon_tools_mcp.py
evaluation_utils/mcp_game_servers/star_craft/: config.yaml  server.py
evaluation_utils/mcp_game_servers/star_craft/game/: __init__.py  star_craft_env.py
evaluation_utils/mcp_game_servers/star_craft/game/utils/: actions.py  bots.py
evaluation_utils/mcp_game_servers/street_fighter/: config.yaml  server.py
evaluation_utils/mcp_game_servers/street_fighter/game/: __init__.py  street_fighter_env.py
evaluation_utils/mcp_game_servers/super_mario/: config.yaml  server.py
evaluation_utils/mcp_game_servers/super_mario/game/: __init__.py  all_object_patterns.json  bbox_to_tensor.py  super_mario_env.py  wrappers.py
evaluation_utils/mcp_game_servers/super_mario/game/assets/: 0_brick_brown.json  1_question_block_dark.json  1_question_block_light.json  1_question_block_mild.json  2_inactivated_block.json  3_monster_mushroom.json  4_monster_turtle.json  5_pit_1start.json  5_pit_2end.json  6_pipe_green.json  7_item_mushroom_green.json  7_item_mushroom_red.json  8_stair.json  9_flag.json
evaluation_utils/mcp_game_servers/twenty_fourty_eight/: config.yaml  server.py
evaluation_utils/mcp_game_servers/twenty_fourty_eight/game/: __init__.py  game.py  logic.py  twenty_fourty_eight_env.py
evaluation_utils/mcp_game_servers/utils/: module_creator.py
evaluation_utils/mcp_game_servers/utils/types/: game_io.py  misc.py
evaluation_utils/protos/: game_service.proto  game_service_pb2.py  game_service_pb2_grpc.py
